Revert "ARM: dts: msm: Set rcu_expedited for sdm855"
This reverts commit 911ed9aadf134f633ec8c933acf06754a328b250.

This hurts battery and jitter without a noticeable real-world
performance improvement.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Change-Id: I4174bfae9046aae85054ada7a5ec5b25b111e827

--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -469,7 +469,7 @@
 	};
 
 	chosen {
-		bootargs = "rcu_nocbs=0-7";
+		bootargs = "rcu_nocbs=0-7 noirqdebug cgroup.memory=nokmem,nosocket"
 	};
 
 	soc: soc { };
