--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -121,3 +121,9 @@ obj-$(CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE) += xiaomi/
 obj-$(CONFIG_TOUCHSCREEN_GOODIX_BRL) += gt9897t/
 obj-$(CONFIG_TOUCHSCREEN_GOODIX_GTX9896_I2C) += gt9896/
 obj-$(CONFIG_TOUCHSCREEN_FTS)		+= ft8719_touch_f7b/
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= nvt_touch_f7b/
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= lct_ctp_selftest.o
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= lct_tp_info.o
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= lct_tp_work.o
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= lct_tp_gesture.o
+obj-$(CONFIG_TOUCHSCREEN_NVT_F7B)	+= lct_tp_grip_area.o
