--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -250,6 +250,38 @@ config CPU_FREQ_GOV_INTERACTIVE
 
 	  If in doubt, say N.
 
+if CPU_FREQ_GOV_SCHEDUTIL
+
+config SCHEDUTIL_UP_RATE_LIMIT_LP
+	int "Default up rate-limit for schedutil on LITTLE CPUs"
+	default 0
+	help
+	  This sets schedutil's default frequency up rate-limit in
+	  microseconds.
+
+config SCHEDUTIL_DOWN_RATE_LIMIT_LP
+	int "Default down rate-limit for schedutil on LITTLE CPUs"
+	default 0
+	help
+	  This sets schedutil's default frequency down rate-limit in
+	  microseconds.
+
+config SCHEDUTIL_UP_RATE_LIMIT_PERF
+	int "Default up rate-limit for schedutil on BIG CPUs"
+	default 0
+	help
+	  This sets schedutil's default frequency up rate-limit in
+	  microseconds.
+
+config SCHEDUTIL_DOWN_RATE_LIMIT_PERF
+	int "Default down rate-limit for schedutil on BIG CPUs"
+	default 0
+	help
+	  This sets schedutil's default frequency down rate-limit in
+	  microseconds.
+
+endif
+
 comment "CPU frequency scaling drivers"
 
 config CPUFREQ_DT
