--- a/.github/workflows/oss.yml
+++ b/.github/workflows/oss.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - name: setting configurasi
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: setting Runner
       run: |
@@ -17,9 +17,12 @@ jobs:
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
           ca-certificates python3 python2 binutils \
-          binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi
+          binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
     - name: kompile krunulll....
       run: |
+          git config --global user.name "RooGhz720"
+          git config --global user.email "RooGhz720@gmail.com"
+          git revert 87b02344b6ffb053fdaadee8b5649d9377b9d47e --no-edit
           curl https://raw.githubusercontent.com/RooGhz720/RooGhz720/main/oss.sh > oss.sh
           chmod +x oss.sh
           bash oss.sh
