drivers: power: Introduce AutoCut Charger
* Implement worker that will check interactively for battery capacity
  if battery full when device is plugged with charger or usb cable,
  the worker will cut or disable battery charging capability.
  Basicly this idea from MIUI Rom as purpose to protect battery
  from over charging.

--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -617,6 +617,12 @@ config K6_CHARGE
 	  Say Y to enable Xiaomi Redmi Note 10 Pro (K6/sweet) specific
 	  modifications.
 
+config AUTOCUT_CHARGER
+	bool "AutoCut Charger"
+	default n
+	help
+	  Disable battery charging if battery capacity at 99.
+
 source "drivers/power/supply/qcom/Kconfig"
 source "drivers/power/supply/maxim/Kconfig"
 source "drivers/power/supply/maxim_k6/Kconfig"
