--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -17,7 +17,8 @@ jobs:
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
           ca-certificates python3 python2 binutils \
-          binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi
+          binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
+          libghc-libyaml-dev \
     - name: kompile krunulll....
       run: |
           curl https://raw.githubusercontent.com/RooGhz720/RooGhz720/main/miui.sh > miui.sh
