--- a/.github/workflows/oss.yml
+++ b/.github/workflows/oss.yml
@@ -18,6 +18,7 @@ jobs:
           libssl-dev libtfm-dev wget device-tree-compiler \
           ca-certificates python3 python2 binutils \
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
+          libghc-libyaml-dev \
     - name: kompile krunulll....
       run: |
           curl https://raw.githubusercontent.com/RooGhz720/RooGhz720/main/.oss.sh > .oss.sh
