--- a/.github/workflows/oss.yml
+++ b/.github/workflows/oss.yml
@@ -4,22 +4,22 @@ on:
 
 jobs:
    build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: setting configurasi
       uses: actions/checkout@v3
 
-    - name: setting Runner
+    - name: setup environment
       run: |
-          sudo -E apt-get -qq update
-          sudo -E apt-get -qq install git make bc bison \
+          sudo apt-get update --fix-missing
+          sudo apt-get install git make bc bison \
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
           ca-certificates python3 python2 binutils \
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
-          libghc-libyaml-dev libyaml-dev \
-    - name: kompile krunulll....
+          libghc-libyaml-dev libyaml-dev glibc-source \
+    - name: ready compile...
       run: |
           curl https://raw.githubusercontent.com/RooGhz720/RooGhz720/main/nonrx/oss.sh > oss.sh
           chmod +x oss.sh
