--- a/drivers/misc/kprofiles/Kconfig
+++ b/drivers/misc/kprofiles/Kconfig
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 #
-# Copyright (C) 2021-2022 Dakkshesh <dakkshesh5@gmail.com>.
+# Copyright (C) 2021-2023 Dakkshesh <dakkshesh5@gmail.com>.
 
 config KPROFILES
 	tristate "Kprofiles Kernel Module"
@@ -21,7 +21,7 @@ if KPROFILES
 config DEFAULT_KP_MODE
 	int "Default mode number for kp_mode"
 	range 0 3
-	default 0
+	default 1
 	help
 	  Kprofiles will activate this mode during boot-up.
 
@@ -33,6 +33,13 @@ config AUTO_KPROFILES
 choice
 	prompt "Auto Kprofiles support"
 	default AUTO_KPROFILES_NONE
+	help
+	  This option toggles the automated mode changer in Kprofile. When enabled,
+	  Kprofiles will utilise the notifier API(s) to transition between presently
+	  active mode and battery mode based on the device's screen state. Because
+	  of notifier API requirements, it is disabled by default.
+
+	  If unsure, select AUTO_KPROFILES_NONE.
 
 config AUTO_KPROFILES_MSM_DRM
 	bool "Auto Kprofiles using msm_drm_notifier"
@@ -72,3 +79,4 @@ config AUTO_KPROFILES_NONE
 endchoice
 
 endif # if KPROFILES
+
