--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -311,6 +311,24 @@ config CPU_FREQ_GOV_BLU_SCHEDUTIL
 
 	  If in doubt, say N.
 
+if CPU_FREQ_GOV_BLU_SCHEDUTIL
+
+config BLU_SCHEDUTIL_UP_RATE_LIMIT
+	int "Default up rate-limit for blu schedutil"
+	default 500
+	help
+	  This sets blu schedutil's default frequency up rate-limit in
+	  microseconds.
+
+config BLU_SCHEDUTIL_DOWN_RATE_LIMIT
+	int "Default down rate-limit for blu schedutil"
+	default 20000
+	help
+	  This sets blu schedutil's default frequency down rate-limit in
+	  microseconds.
+
+endif
+
 comment "CPU frequency scaling drivers"
 
 config CPUFREQ_DT
