--- a/arch/arm64/boot/dts/qcom/dsi-panel-k6-38-0c-0a-fhd-dsc-video.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-k6-38-0c-0a-fhd-dsc-video.dtsi
@@ -214,7 +214,7 @@
 					39 00 00 00 00 00 03 F0 A5 A5
 					39 01 00 00 00 00 03 51 01 E8
 				];
-				qcom,mdss-dsi-dispparam-120hz-dc-crc-setting-command-state = "dsi_hs_mode";
+				qcom,mdss-dsi-dispparam-120hz-dc-crc-setting-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-dispparam-crc-off-command = [
          				/* CRC Disable (Normal mode) */
 					39 00 00 00 00 00 03 F0 5A 5A
