--- a/.github/workflows/hyp.yml
+++ b/.github/workflows/hyp.yml
@@ -14,6 +14,16 @@ jobs:
           git clone --depth=1 https://github.com/kdrag0n/proton-clang.git -b master  CLANG_DIR
           git clone --depth=1 https://github.com/RooGhz720/Anykernel3.git -b hyper hyper
 
+      - name: setup environment
+        run: |
+          sudo apt-get update --fix-missing
+          sudo apt-get install git make bc bison \
+          openssl curl zip kmod cpio flex libelf-dev \
+          libssl-dev libtfm-dev wget device-tree-compiler \
+          ca-certificates python3 python2 binutils \
+          binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
+          libghc-libyaml-dev libyaml-dev glibc-source \
+
       - name: Set up kernul
         run: |
           DIR="${PWD}"
@@ -28,9 +38,6 @@ jobs:
           KERNEL_IMG=$DIR/out/arch/$ARCH/boot/Image.gz-dtb
           KERNEL_DTBO=$DIR/out/arch/$ARCH/boot/dtbo.img
           KERNEL_DTB=$DIR/out/arch/$ARCH/boot/dtb.img
-          [[ ! -d out ]] && mkdir out
-          [[ -f "$KERNEL_IMG" ]] && rm "$KERNEL_IMG"
-          find . -name "*.dtb" -type f -delete
 
       - name: Send infone maseh to telegram
         run: |
@@ -42,22 +49,10 @@ jobs:
 
       - name: Compile
         run: |
-          make O=out sweet-perf_defconfig -j$(nproc --all)
-          BUILD_START=$(date +"%s")
+          make O=out clean
+          make O=out mrproper
+          make O=out sweet-perf_defconfig
           make -j$(nproc --all) O=out ARCH=arm64 LLVM=1 LLVM_IAS=1 AR=llvm-ar NM=llvm-nm LD=ld.lld OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump STRIP=llvm-strip CC=clang CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi- 2>&1 | tee error.log
-          BUILD_END=$(date +"%s")
-          DIFF=$((BUILD_END - BUILD_START))
-          if ! [ -a "$KERNEL_IMG" ]; then
-            echo -e "\n> Build failed"
-            curl -F document=@"error.log"  "https://api.telegram.org/bot${{secrets.BOT_API}}/sendDocument" \
-            -F caption="
-            *Kernel Compiling Failed !!*
-            Time Taken: $((DIFF / 60))m $((DIFF % 60))s
-            " \
-            -F chat_id=${{secrets.CHAT_ID}} \
-            -F parse_mode=markdown &> /dev/null
-            exit 1
-          fi
 
       - name: Packing kernul
         run: |
