--- a/.github/workflows/hyp.yml
+++ b/.github/workflows/hyp.yml
@@ -13,7 +13,7 @@ jobs:
           sudo apt-get install git make bc bison \
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
-          ca-certificates python3 python2 binutils \
+          ca-certificates python3 python2 binutils llvm-8 \
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
           libghc-libyaml-dev libyaml-dev glibc-source lld \
       
@@ -22,7 +22,7 @@ jobs:
           git clone --depth=1 https://github.com/radcolor/aarch64-linux-gnu.git -b master  GCC
           git clone --depth=1 https://github.com/radcolor/arm-linux-gnueabi.git -b master  GCC32
           git clone --depth=1 https://github.com/kdrag0n/proton-clang.git -b master  CLANG_DIR
-          git clone --depth=1 https://github.com/RooGhz720/Anykernel3.git -b hyper hyper
+          git clone --depth=1 https://github.com/RooGhz720/Anykernel3.git -b hyper ak3
 
       - name: Set up kernul
         run: |
@@ -49,6 +49,8 @@ jobs:
 
       - name: Compile
         run: |
+          DIR="${PWD}"
+          cd $DIR
           mkdir out
           make O=out clean
           make O=out mrproper
@@ -57,18 +59,19 @@ jobs:
 
       - name: Packing kernul
         run: |
-          cd $DIR/hyper
+          DIR="${PWD}"
+          cd $DIR/ak3
           git clean -fd
-          mv "$KERNEL_IMG" $DIR/hyper/Image.gz-dtb
-          mv "$KERNEL_DTBO" $DIR/hyper/dtbo.img
-          mv "$KERNEL_DTB" $DIR/hyper/dtb.img
+          mv "$KERNEL_IMG" $DIR/ak3/Image.gz-dtb
+          mv "$KERNEL_DTBO" $DIR/ak3/dtbo.img
+          mv "$KERNEL_DTB" $DIR/ak3/dtb.img
           ZIP_NAME=Hyperion-v3-$(date +%d-%m-%Y).zip
-
+          zip -r9 "$ZIP_NAME" ./* -x .git README.md ./*placeholder
+          
       - name: Send kernul to telegram
         run: |
           COMMIT=$(git log --pretty=format:"%s" -1)
           COMMIT_SHA=$(git rev-parse --short HEAD)
-          zip -r9 "$ZIP_NAME" ./* -x .git README.md ./*placeholder
           echo -e "\n> ZIP DONE.\n> File: $ZIP_NAME"
           curl -F document=@"$ZIP_NAME"  "https://api.telegram.org/bot${{ secrets.BOT_API }}/sendDocument" \
             -F caption="
