--- a/.github/workflows/hyp.yml
+++ b/.github/workflows/hyp.yml
@@ -13,9 +13,9 @@ jobs:
           sudo apt-get install git make bc bison \
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
-          ca-certificates python3 python2 binutils llvm-8 \
+          ca-certificates python3 python2 binutils clang \
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
-          libghc-libyaml-dev libyaml-dev glibc-source lld \
+          libghc-libyaml-dev libyaml-dev glibc-source lld lldb \
       
       - name: Cloning bahan-bahan
         run: |
