--- a/.github/workflows/hyp.yml
+++ b/.github/workflows/hyp.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: setup environment
@@ -13,16 +13,16 @@ jobs:
           sudo apt-get install git make bc bison \
           openssl curl zip kmod cpio flex libelf-dev \
           libssl-dev libtfm-dev wget device-tree-compiler \
-          ca-certificates python3 python2 binutils clang \
+          ca-certificates python3 python2 binutils clang llvm \
           binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi \
           libghc-libyaml-dev libyaml-dev glibc-source lld lldb \
       
       - name: Cloning bahan-bahan
         run: |
+          git clone https://github.com/RooGhz720/Anykernel3.git -b hyper ak3
           git clone --depth=1 https://github.com/radcolor/aarch64-linux-gnu.git -b master  GCC
           git clone --depth=1 https://github.com/radcolor/arm-linux-gnueabi.git -b master  GCC32
           git clone --depth=1 https://github.com/kdrag0n/proton-clang.git -b master  CLANG_DIR
-          git clone --depth=1 https://github.com/RooGhz720/Anykernel3.git -b hyper ak3
 
       - name: Set up kernul
         run: |
