--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -14,6 +14,7 @@ source "drivers/input/touchscreen/nt36672c/Kconfig"
 source "drivers/input/touchscreen/goodix_driver_gt9886/Kconfig"
 source "drivers/input/touchscreen/f4_goodix_driver_gt9886/Kconfig"
 source "drivers/input/touchscreen/ft8719_touch_f7b/Kconfig"
+source "drivers/input/touchscreen/fts/Kconfig"
 source "drivers/input/touchscreen/fts_521/Kconfig"
 source "drivers/input/touchscreen/gt9897t/Kconfig"
 source "drivers/input/touchscreen/goodix_driver_gt9886/Kconfig"
@@ -663,6 +664,16 @@ config TOUCHSCREEN_EDT_FT5X06
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called edt-ft5x06.
+	  
+config TOUCHSCREEN_ST_FTS
+	tristate "ST FTS I2C Touchscreen"
+	depends on I2C
+	help
+	  Say Y here if you have ST FTS series I2C touchscreen.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
 
 config TOUCHSCREEN_MIGOR
 	tristate "Renesas MIGO-R touchscreen"
