driver/touchscreen: import fts_ts driver panel
Signed-off-by: RooGhz720 <rooghz720@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -12,6 +12,7 @@ menuconfig INPUT_TOUCHSCREEN
 if INPUT_TOUCHSCREEN
 source "drivers/input/touchscreen/xiaomi/Kconfig"
 source "drivers/input/touchscreen/gt9896/Kconfig"
+source "drivers/input/touchscreen/ft3518_i2c/Kconfig"
 
 config TOUCHSCREEN_TDDI_DBCLK
 	bool "TDDI IC enable double click"
@@ -19,6 +20,13 @@ config TOUCHSCREEN_TDDI_DBCLK
 	  Say Y here if you have a tddi ic and want keep avdd,avee
 	  when suspend.
 
+config TOUCHSCREEN_COMMON
+		bool "touchscreen for LCT project"
+		depends on SPI
+		default y
+		help
+			Say Y here if you have lct tp info connected.
+	
 config TOUCHSCREEN_PROPERTIES
 	def_tristate INPUT
 	depends on INPUT
@@ -1299,5 +1307,7 @@ config TOUCHSCREEN_RAYDIUM_CHIPSET
 	  Say Y here if you have a Raydium WT030 CHIPSET touchscreen.
 
 	  If unsure, say N.
+
+source "drivers/input/touchscreen/focaltech_touch/Kconfig"
 
 endif
