--- a/arch/arm64/boot/dts/qcom/sweet-sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sweet-sdmmagpie.dtsi
@@ -536,34 +536,32 @@ And public attribution of xiaomi platforms(like F3 and so and)
 
 &qupv3_se7_i2c{
 	status = "ok";
-	touchscreen {
-		compatible = "focaltech,fts";
+	focaltech@38 {
+		compatible = "focaltech,fts_K6";
 		reg = <0x38>;
- 		/* regulator Configuration */
-		//touch_vddio-supply = <&L18A>;
-		//touch_lab-supply = <&lcdb_ldo_vreg>;
-		//touch_ibb-supply = <&lcdb_ncp_vreg>;
-		//vdd-supply=<&L7C>;
-		vcc_i2c-supply=<&L13A>;
-		/* Focaltech GPIO Configuration */
 		interrupt-parent = <&tlmm>;
-		interrupts = <89 0x02>;
-		focaltech,avdd-gpio = <&tlmm 96 0>;
-		focaltech,reset-gpio = <&tlmm 88 0x01>;
-		focaltech,irq-gpio = <&tlmm 89 0x02>;
+		interrupts = <0x09 0x00>;
+		vdd-supply = <&pm6150l_l11>;
+		vcc_i2c-supply = <&tlmm 0x5a 0x00>;
+		focaltech,reset-gpio = <&tlmm 0x08 0x00>;
+		focaltech,irq-gpio = <&tlmm 0x09 0x00>;
 		focaltech,max-touch-number = <10>;
-		focaltech,display-coords =  <0 0 1080 2400>;
+		focaltech,display-coords = <0 0 1079 2399>;
 		pinctrl-names = "pmx_ts_active","pmx_ts_suspend","pmx_ts_release";
-		pinctrl-0 = <&ts_int_active &ts_reset_active>;
+		pinctrl-0 = <&ts_active>;
 		pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
 		pinctrl-2 = <&ts_release>;
-		/*
+		/* from docs
 		focaltech,have-key;
 		focaltech,key-number = <3>;
 		focaltech,keys = <139 102 158>;
 		focaltech,key-x-coords = <200 600 800>;
 		focaltech,key-y-coords = <2000 2000 2000>;
 		*/
+		/* from dtbo.img V14.0.1.0.TKFMIXM*/
+		focaltech,touch-range-array = <0x01 0x05 0x0a 0x0f 0x14>;
+		focaltech,touch-def-array = <0x03 0x03 0x03 0x03>;
+		focaltech,touch-expert-array = <0x0a 0x0a 0x0a 0x0a 0x14 0x14 0x0f 0x0a 0x14 0x14 0x14 0x0a>;
 	};
 	gt9896@5d {
 		compatible = "goodix,gt9896";
