--- a/drivers/input/touchscreen/ft3658u_i2c/Kconfig
+++ b/drivers/input/touchscreen/ft3658u_i2c/Kconfig
@@ -2,15 +2,15 @@
 # Focaltech Touchscreen driver configuration
 #
 
-config TOUCHSCREEN_FT3518_I2C
+config TOUCHSCREEN_FT3658U_I2C
     bool "Focaltech Touchscreen"
     default y
     help
       Say Y here if you have Focaltech touch panel.
       If unsure, say N.
       
-config TOUCHSCREEN_FT3518_I2C_DIRECTORY
+config TOUCHSCREEN_FT3658U_I2C_DIRECTORY
     string "Focaltech ts directory name"
     default "focaltech_touch"
-    depends on TOUCHSCREEN_FT3518_I2C
+    depends on TOUCHSCREEN_FT3658U_I2C
     
