--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -9,24 +9,8 @@ fwdir := $(subst $(quote),,$(CONFIG_EXTRA_FIRMWARE_DIR))
 fwabs := $(addprefix $(srctree)/,$(filter-out /%,$(fwdir)))$(filter /%,$(fwdir))
 
 fw-external-y := $(subst $(quote),,$(CONFIG_EXTRA_FIRMWARE))
-fw-shipped-$(CONFIG_TOUCHSCREEN_NVT_F7B) += novatek/tianma_nt36672a_miui_f7b.bin
-fw-shipped-$(CONFIG_TOUCHSCREEN_NVT_F7B) += novatek/shenchao_nt36672a_miui_f7b.bin
-fw-shipped-$(CONFIG_TOUCHSCREEN_NVT_F7B) += novatek/shenchao_2nd_nt36672a_miui_f7b.bin
-fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
 
-quiet_cmd_ihex  = IHEX    $@
-      cmd_ihex  = $(OBJCOPY) -Iihex -Obinary $< $@
-
-quiet_cmd_ihex2fw  = IHEX2FW $@
-      cmd_ihex2fw  = $(objtree)/$(obj)/ihex2fw $< $@
-
-quiet_cmd_h16tofw  = H16TOFW $@
-      cmd_h16tofw  = $(objtree)/$(obj)/ihex2fw -w $< $@
-
-fw-shipped-$(CONFIG_TOUCHSCREEN_GOODIX_GTX8) += goodix_gt9886_cfg_f10.bin goodix_gt9886_fw_f10.bin
-fw-shipped-$(CONFIG_TOUCHSCREEN_GOODIX_GTX9886_F4) += goodix_gt9886_cfg_f4.bin goodix_gt9886_fw_f4.bin
-fw-shipped-$(CONFIG_TOUCHSCREEN_ST_FTS_V521) += st_fts_f4.ftb st_fts_f4l.ftb
-
+fw-shipped-$(CONFIG_TOUCHSCREEN_FTS) += focaltech_ts_fw.bin
 fw-shipped-$(CONFIG_TOUCHSCREEN_GOODIX_GTX9896_I2C) += goodix_gt9896_cfg.bin goodix_gt9896_fw.bin
 
 fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
