--- a/arch/arm64/boot/dts/qcom/sweet-sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sweet-sdmmagpie.dtsi
@@ -536,76 +536,35 @@ And public attribution of xiaomi platforms(like F3 and so and)
 
 &qupv3_se7_i2c{
 	status = "ok";
-	focaltech@38 {
+	focaltech@38{
 		compatible = "focaltech,fts_K6";
 		reg = <0x38>;
 		interrupt-parent = <&tlmm>;
-		interrupts = <9 0x2008>;
-		pinctrl-names = "pmx_ts_active", "pmx_ts_suspend";
+		interrupts = <0x09 0x00>;
+		vdd-supply = <&pm6150l_l11>;
+		vcc_i2c-supply = <&tlmm 0x5a 0x00>;
+		focaltech,reset-gpio = <&tlmm 0x08 0x00>;
+		focaltech,irq-gpio = <&tlmm 0x09 0x00>;
+		focaltech,max-touch-number = <10>;
+		focaltech,display-coords = <0 0 1079 2399>;
+		pinctrl-names = "pmx_ts_active","pmx_ts_suspend","pmx_ts_release";
 		pinctrl-0 = <&ts_active>;
 		pinctrl-1 = <&ts_int_suspend &ts_reset_suspend>;
-		vdd-supply = <&touch_vddio_vreg>;
-		avdd-supply = <&pm6150l_l6>;
-		fts,pwr-reg-name = "avdd";
-		fts,bus-reg-name = "vdd";
-		fts,irq-gpio = <&tlmm 9 0x2008>;
-		fts,irq-gpio-name = "fts_irq";
-		fts,reset-gpio-enable;
-		fts,reset-gpio = <&tlmm 8 0x00>;
-		fts,reset-gpio-name = "fts_rst";
-		fts,irq-flags = <0x2008>; /* IRQF_ONESHOT | IRQF_TRIGGER_LOW */
-		fts,x-max = <1080>;
-		fts,y-max = <2340>;
-		fts,default-fw-name = "st_fts_f4l.ftb";
-		fts,config-array-size = <1>;
-		fts,dump-click-count;
-		fts,touch-up-threshold-min = <40>;
-		fts,touch-up-threshold-max = <120>;
-		fts,touch-up-threshold-def = <80>;
-		fts,touch-tolerance-min = <5>;
-		fts,touch-tolerance-max = <35>;
-		fts,touch-tolerance-def = <25>;
-		/*edge filter rects in gamemode*/
-		fts,cornerfilter-area-step1 = <100>;
-		fts,cornerfilter-area-step2 = <170>;
-		fts,cornerfilter-area-step3 = <250>;
-		fts,touch-deadzone-filter-ver = <2 0 0 0 0 0 0 0
-									    2 1 0 0 0 0 0 0
-									    2 2 0 0 5 2339 0 0
-									    2 3 1074 0 1079 2339 0 0>;
-		fts,touch-deadzone-filter-hor = <2 0 0 0 1079 5 0 0
-									    2 1 0 2334 1079 2339 0 0
-									    2 2 0 0 5 2339 0 0
-									    2 3 1074 0 1079 2339 0 0>;
-		fts,touch-edgezone-filter-ver = <1 0 0 0 0 0 0 0
-									    1 1 0 0 0 0 0 0
-									    1 2 0 0 40 2339 0 0
-									    1 3 1039 0 1079 2339 0 0>;
-		fts,touch-edgezone-filter-hor = <1 0 0 0 1079 40 0 0
-									    1 1 0 2299 1079 2339 0 0
-									    1 2 0 0 40 2339 0 0
-									    1 3 1039 0 1079 2339 0 0>;
-		fts,touch-cornerzone-filter-ver = <0 0 0 0 0 0 0 0
-									    0 1 0 0 0 0 0 0
-									    0 2 0 2039 150 2339 0 0
-									    0 3 929 2039 1079 2339 0 0>;
-		fts,touch-cornerzone-filter-hor1 = <0 0 0 0 170 170 0 0
-									    0 1 0 0 0 0 0 0
-									    0 2 0 2169 170 2339 0 0
-									    0 3 0 0 0 0 0 0>;
-		fts,touch-cornerzone-filter-hor2 = <0 0 0 0 0 0 0 0
-									    0 1 909 0 1079 170 0 0
-									    0 2 0 0 0 0 0 0
-									    0 3 909 2169 1079 2339 0 0>;
-		fts,touch-idletime-min = <0>;
-		fts,touch-idletime-max = <12750>;
-		fts,touch-idletime-def = <12450>;
-		fts,cfg_0 {
-			fts,tp-vendor = <0x51>;
-			fts,fw-name = "st_fts_f4l.ftb";
-			fts,limit-name = "stm_fts_production_limits.csv";
-			fts,clicknum-file-name = "fts+sdc";
-		};
+		pinctrl-2 = <&ts_release>;
+		/* from docs
+		focaltech,have-key;
+		focaltech,key-number = <3>;
+		focaltech,keys = <139 102 158>;
+		focaltech,key-x-coords = <200 600 800>;
+		focaltech,key-y-coords = <2000 2000 2000>;
+		*/
+		/* from dtbo.img V14.0.1.0.TKFMIXM*/
+		focaltech,touch-range-array = <0x01 0x05 0x0a 0x0f 0x14>;
+		focaltech,touch-def-array = <0x03 0x03 0x03 0x03>;
+		focaltech,touch-expert-array = <0x0a 0x0a 0x0a 0x0a 0x14 0x14 0x0f 0x0a 0x14 0x14 0x14 0x0a>;
+		focaltech,touch-idletime-min = <0>;
+		focaltech,touch-idletime-max = <12750>;
+		focaltech,touch-idletime-def = <12450>;
 	};
 	gt9896@5d {
 		compatible = "goodix,gt9896";
